--- a/The Complete 2021 Web Development Bootcamp/CSS/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/CSS/css/styles.css
@@ -1,62 +1,64 @@
 body {
-    margin: 0;
-    text-align: center;
-    font-family: Montserrat, sans-serif;
+  margin: 0;
+  text-align: center;
+  font-family: Montserrat, sans-serif;
 }
 
 h1 {
-    margin: 0;
-    padding-top: 70px;
-    padding-bottom: 20px;
-    font-family: 'Marck Script', cursive;
+  margin: 0;
+  padding-top: 70px;
+  padding-bottom: 20px;
+  font-family: "Marck Script", cursive;
+  font-size: 5.625rem; /*root em, #px divided by 16*/
+}
+
+h2 {
+  font-size: 2.5rem;
 }
 
 .top-container {
-    background-color: #8ac4d0;
-    width: auto;
-    height: 100vh;
+  background-color: #8ac4d0;
+  width: auto;
+  height: 100vh;
 }
 
 .middle-container {
-    background-color: #f4d160;
+  background-color: #f4d160;
 }
 
 .bottom-container {
-    background-color: #28527a;
+  background-color: #28527a;
 }
 
-
 .mountain1 {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    left:0;
-    height: 75%;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+  height: 75%;
 }
 
 .cloud2 {
-    position: absolute;
-    top: 20px;
-    left: 40px;
-    width: 400px;
-    height: 200px;
-
+  position: absolute;
+  top: 20px;
+  left: 40px;
+  width: 400px;
+  height: 200px;
 }
 
 .cloud1 {
-    position: absolute;
-    top: 20px;
-    right: 40px;
-    width: 400px;
-    height: 200px;
-    opacity: 90%;
-
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  width: 400px;
+  height: 200px;
+  opacity: 90%;
 }
 
 .profile img {
-    border-radius: 0% 0% 100% 100%;
-    padding-top: 20px;
-    height: 150px;
+  border-radius: 0% 0% 100% 100%;
+  padding-top: 20px;
+  height: 150px;
 }
 
 /* https://colorhunt.co/palette/257808 */
