--- a/The Complete 2021 Web Development Bootcamp/CSS/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/CSS/css/styles.css
@@ -7,13 +7,23 @@ body {
 h1 {
   margin: 0;
   padding-top: 70px;
-  padding-bottom: 20px;
   font-family: "Marck Script", cursive;
   font-size: 5.625rem; /*root em, #px divided by 16*/
+  line-height: 2;
+  color: #fbeeac;
 }
 
+.programmer-text {
+  color:#fbeeac;
+}
 h2 {
   font-size: 2.5rem;
+  color: #28527a;
+  font-weight: normal;
+}
+
+h3, a {
+  color: #28527a;
 }
 
 .top-container {
@@ -27,8 +37,25 @@ h2 {
 }
 
 .bottom-container {
-  background-color: #28527a;
+  background-color: #fbeeac;
 }
+
+.skill-row {
+  width: 50%;
+  margin:  100px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+hr {
+  clear: right;
+}
+
+.clear-left {
+  clear: left;
+}
+
+/*Images*/
 
 .mountain1 {
   position: absolute;
@@ -59,6 +86,20 @@ h2 {
   border-radius: 0% 0% 100% 100%;
   padding-top: 20px;
   height: 150px;
+}
+
+.skill-img {
+  width: 25%;
+}
+
+.code-img {
+  float: left;
+  margin-right: 30px;
+}
+
+.sauce-img {
+  float: right;
+  margin-left: 30px;
 }
 
 /* https://colorhunt.co/palette/257808 */
