--- a/The Complete 2021 Web Development Bootcamp/CSS/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/CSS/css/styles.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   text-align: center;
   font-family: Montserrat, sans-serif;
+  background-color: #fbeeac;
+  color: #40514E
 }
 
 h1 {
@@ -33,28 +35,92 @@ h3, a {
 }
 
 .middle-container {
-  background-color: #f4d160;
+  background-color: #fbeeac;
 }
 
 .bottom-container {
-  background-color: #fbeeac;
+  background-color: #f4d160;
+}
+
+p {
+  line-height: 2;
 }
 
 .skill-row {
   width: 50%;
-  margin:  100px auto;
+  margin:  80px auto;
   text-align: left;
-  line-height: 2;
+  padding-top: 50px;
 }
 
 hr {
   clear: right;
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+  
 }
 
 .clear-left {
   clear: left;
 }
 
+.contact-message {
+  width: 40%;
+  margin: 40px auto;
+}
+
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #8ac4d0;
+}
+
+.btn {
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  color: #FFFFFF;
+  font-family: Arial;
+  font-size: 20px;
+  font-weight: 100;
+  padding: 14px;
+  border-style-hover: solid;
+  border-width-hover: 1;
+  background-color: #8AC4D0;
+  text-shadow: 1px 1px 20px #000000;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.btn:hover {
+  background: #8AC4D0;
+  background-image: -webkit-linear-gradient(top, #8AC4D0, #28527A);
+  background-image: -moz-linear-gradient(top, #8AC4D0, #28527A);
+  background-image: -ms-linear-gradient(top, #8AC4D0, #28527A);
+  background-image: -o-linear-gradient(top, #8AC4D0, #28527A);
+  background-image: -webkit-gradient(to bottom, #8AC4D0, #28527A);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.made-by {
+  font-size: .7em;
+}
+
+.footer-link {
+  margin: 15px;
+}
 /*Images*/
 
 .mountain1 {
