--- a/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/css/styles.css
@@ -1,5 +1,11 @@
+body{
+    font-family: Montserrat;
+    font-weight: 900;
+    text-align:center;
+  }
+
 #title {
-  background-color: #284b2c;
+  background-color: #ffc107;
 }
 
 .container-fluid {
@@ -10,5 +16,26 @@ h1 {
   font-family: Montserrat, sans-serif;
   font-size: 3rem;
   line-height: 1.5;
-  font-weight: 900;
 }
+
+/* Navigation bar */
+
+.navbar{
+    padding:0 0 4.5rem;
+  }
+  
+  .navbar-brand{
+    font-family:Ubuntu, sans-serif;
+    font-size:2.5rem;
+    font-weight:bold;
+  }
+  
+  .nav-item{
+    padding:0 18px;
+  }
+  
+  .nav-link{
+    font-size:1.2rem;
+    font-family:Montserrat;
+    font-weight: 300;
+  }
