--- a/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/css/styles.css
@@ -1,11 +1,12 @@
-body{
-    font-family: Montserrat;
-    font-weight: 900;
-    text-align:center;
-  }
+body {
+  font-family: Montserrat;
+  font-weight: 900;
+  text-align: center;
+}
 
 #title {
   background-color: #ffc107;
+  color: #fff;
 }
 
 .container-fluid {
@@ -14,28 +15,42 @@ body{
 
 h1 {
   font-family: Montserrat, sans-serif;
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
+  font-weight: 900;
+
 }
 
 /* Navigation bar */
 
-.navbar{
-    padding:0 0 4.5rem;
-  }
-  
-  .navbar-brand{
-    font-family:Ubuntu, sans-serif;
-    font-size:2.5rem;
-    font-weight:bold;
-  }
-  
-  .nav-item{
-    padding:0 18px;
-  }
-  
-  .nav-link{
-    font-size:1.2rem;
-    font-family:Montserrat;
-    font-weight: 300;
-  }
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: Ubuntu, sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: Montserrat;
+  font-weight: 300;
+}
+
+/* Download Buttons */
+.download-button {
+    margin: 5% 3% 5% 0;
+}
+
+/* Title Image */
+
+.title-image {
+    width: 60%;
+    transform: rotate(25deg);
+}
