--- a/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 h1 {
@@ -60,14 +60,17 @@ h2 {
 /* Title Image */
 
 .title-image {
-    width: 60%;
     transform: rotate(-25deg);
+    position: absolute;
+    right: 15%;
 }
 
 /* Feature Section */
 
 #features {
     padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
 }
 
 #features p {
