--- a/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/css/styles.css
@@ -9,6 +9,7 @@ body {
 #title {
   background-color: #ffc107;
   color: #fff;
+  text-align: left;
 }
 
 .container-fluid {
@@ -62,7 +63,8 @@ h2 {
 .title-image {
     transform: rotate(-25deg);
     position: absolute;
-    right: 15%;
+    right: 20%;
+    width: 20%;
 }
 
 /* Feature Section */
@@ -137,4 +139,17 @@ h2 {
 
 .card-header {
   background-color: rgb(255, 193, 7, 0.3);
+}
+
+/* Media Queries */
+
+@media (max-width: 1025px) {
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+  
+  #title {
+    text-align: center;
+  }
 }
