--- a/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/css/styles.css
@@ -153,3 +153,25 @@ h2 {
     text-align: center;
   }
 }
+
+/* Call to action */
+
+#cta {
+  background-color: #ffc107;
+}
+
+#cta h3 {
+  font-weight: 900;
+  font-family: Montserrat, sans-serif;
+  padding: 3%;
+}
+
+/* footer */
+
+#footer {
+  background-color: #fff;
+}
+
+#footer p {
+  font-weight: 300;
+}
