--- a/The Complete 2021 Web Development Bootcamp/Javascript & DOM/Drum Kit/style.css
+++ b/The Complete 2021 Web Development Bootcamp/Javascript & DOM/Drum Kit/style.css
@@ -10,7 +10,26 @@ html {
   font-family: Roboto, sans-serif;
 }
 
-.keys {
+h1 {
+  font-size: 8rem;
+  color: #FFF;
+}
+
+header{
+  position: relative;
+  width: 100%;
+}
+
+#title{
+  position: absolute;
+  margin-right: 400px;
+  margin-top: 200px;
+  top:0;
+  right:0;
+}
+
+.set {
+  position: relative;
   display: flex;
   flex: 1;
   min-height: 100vh;
@@ -18,29 +37,30 @@ html {
   justify-content: center;
 }
 
-.key {
+.drum {
   border: 0.4rem solid black;
   border-radius: 0.5rem;
-  margin: 1rem;
+  margin: 3rem;
   font-size: 1.5rem;
   padding: 1rem 0.5rem;
   transition: all 0.1s ease;
   width: 10rem;
   text-align: center;
-  color: white;
+  color: #DBEDF3;
   background: rgba(0, 0, 0, 0.4);
   text-shadow: 0 0 0.5rem black;
+  text-transform: uppercase;
+  font-size: 8rem;
+}
+
+button {
+  display: block;
 }
 
 .playing {
   transform: scale(1.1);
   border-color: #30a9de;
   box-shadow: 0 0 1rem #ffc600;
-}
-
-kbd {
-  display: block;
-  font-size: 4rem;
 }
 
 .sound {
