--- a/The Complete 2021 Web Development Bootcamp/Javascript & DOM/Drum Kit/style.css
+++ b/The Complete 2021 Web Development Bootcamp/Javascript & DOM/Drum Kit/style.css
@@ -44,7 +44,7 @@ header{
   font-size: 1.5rem;
   padding: 1rem 0.5rem;
   transition: all 0.1s ease;
-  width: 10rem;
+  width: 12rem;
   text-align: center;
   color: #DBEDF3;
   background: rgba(0, 0, 0, 0.4);
@@ -55,6 +55,12 @@ header{
 
 button {
   display: block;
+  width: 100%;
+}
+
+span {
+  display: block;
+  font-size: 2rem;
 }
 
 .playing {
