--- a/The Complete 2021 Web Development Bootcamp/EJS/todolist-v1/views/list.ejs
+++ b/The Complete 2021 Web Development Bootcamp/EJS/todolist-v1/views/list.ejs
@@ -7,6 +7,14 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1> <%= kindOfDay %> </h1>    
+    <h1> <%= kindOfDay %> </h1>
+    <ul>
+        <% for (let i=0; i<newListItems.length;  i++ ) { %>
+            <li><%= newListItems[i] %></li>
+            <% } %>
+    <form action="/" method="post">
+            <input type="text" name="newItem">
+            <button type="submit" name="button">Add</button>
+    </form>    
 </body>
 </html>
