--- a/The Complete 2021 Web Development Bootcamp/EJS/todolist-v1/views/list.ejs
+++ b/The Complete 2021 Web Development Bootcamp/EJS/todolist-v1/views/list.ejs
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
-</head>
-<body>
-    <h1> <%= kindOfDay %> </h1>
-    <ul>
-        <% for (let i=0; i<newListItems.length;  i++ ) { %>
-            <li><%= newListItems[i] %></li>
-            <% } %>
-    <form action="/" method="post">
-            <input type="text" name="newItem">
-            <button type="submit" name="button">Add</button>
-    </form>    
-</body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="box" id="heading">
+      <h1><%= listTitle %></h1>
+    </div>
+    <div class="box">
+    <% for (let i=0; i<newListItems.length;  i++ ) { %>
+      <div class="item">
+        <input type="checkbox" />
+        <p><%= newListItems[i] %></p>
+      </div>
+      <% } %>
+
+      <form action="/" method="post">
+        <input type="text" name="newItem" placeholder="Add a to-do" autocomplete="off">
+        <button type="submit" name="button">+</button>
+      </form>
+    </div>
+  </body>
 </html>
