add new work route for different template

--- a/The Complete 2021 Web Development Bootcamp/EJS/todolist-v1/views/list.ejs
+++ b/The Complete 2021 Web Development Bootcamp/EJS/todolist-v1/views/list.ejs
@@ -19,9 +19,9 @@
       </div>
       <% } %>
 
-      <form action="/" method="post">
+      <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="Add a to-do" autocomplete="off">
-        <button type="submit" name="button">+</button>
+        <button type="submit" name="list" value=<%= listTitle %>>+</button>
       </form>
     </div>
   </body>
