add header and footer template ejs and update font in css

--- a/The Complete 2021 Web Development Bootcamp/EJS/todolist-v1/public/css/styles.css
+++ b/The Complete 2021 Web Development Bootcamp/EJS/todolist-v1/public/css/styles.css
@@ -2,7 +2,7 @@ html {
   background-color: #E4E9FD;
   background-image: -webkit-linear-gradient(65deg, 	#406339 50%, #96BDB9 50%);
   min-height: 1000px;
-  font-family: Roboto;
+  font-family: Montserrat;
 }
 
 h1 {
