--- a/The Complete 2021 Web Development Bootcamp/EJS/blog-site/views/home.ejs
+++ b/The Complete 2021 Web Development Bootcamp/EJS/blog-site/views/home.ejs
@@ -1,4 +1,5 @@
-<%- include("header") -%>
+<%- include partials/header -%>
+<!--OR include("partials/header") -->
 <h1>Home</h1>
 <p><%= homeContent %></p>
-<%- include("footer") -%>
+<%- include partials/footer -%>
