--- a/The Complete 2021 Web Development Bootcamp/EJS/blog-site/views/home.ejs
+++ b/The Complete 2021 Web Development Bootcamp/EJS/blog-site/views/home.ejs
@@ -4,7 +4,9 @@
 <p><%= homeContent %></p>
 <% posts.forEach(post => { %>
 <h1><%= post.postTitle %></h1>
-<p><%= post.postBody %></p>
+<p><%= post.postBody.substring(0, 100) + " ..."%>
+<a href="/posts/<%=post.postTitle%>">Read More</a>
+</p>
 <% }); %>
 
 <%- include partials/footer -%>
